// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preparePriorityRuleGroupForForm > condition and rules are added into results, with parsed keys and values 1`] = `
{
  "condition": "AND",
  "rules": [
    {
      "key": "firstTag",
      "operator": "equals",
      "value": "foo",
      "valueType": "string",
    },
    {
      "key": "secondTag",
      "operator": "contains",
      "value": "bar",
      "valueType": "string",
    },
  ],
}
`;

exports[`preparePriorityRuleGroupForForm > empty values are represented as an empty string string 1`] = `
{
  "condition": "AND",
  "rules": [
    {
      "key": "thirdTag",
      "operator": "is_empty",
      "value": "",
      "valueType": "string",
    },
  ],
}
`;

exports[`preparePriorityRuleGroupForForm condition and rules are added into results, with parsed keys and values 1`] = `
{
  "condition": "AND",
  "rules": [
    {
      "key": "firstTag",
      "operator": "equals",
      "value": "foo",
      "valueType": "string",
    },
    {
      "key": "secondTag",
      "operator": "contains",
      "value": "bar",
      "valueType": "string",
    },
  ],
}
`;

exports[`preparePriorityRuleGroupForForm empty values are represented as an empty string string 1`] = `
{
  "condition": "AND",
  "rules": [
    {
      "key": "thirdTag",
      "operator": "is_empty",
      "value": "",
      "valueType": "string",
    },
  ],
}
`;

exports[`preparePriorityRuleGroupForSaving > condition and rules are added into results, with dot-separated key and value 1`] = `
{
  "condition": "AND",
  "rules": [
    {
      "operator": "equals",
      "type": "string",
      "value": "firstTag.foo",
    },
    {
      "operator": "contains",
      "type": "string",
      "value": "secondTag.bar",
    },
    {
      "operator": "==",
      "type": "integer",
      "value": "fourthTag.123",
    },
    {
      "operator": "<=",
      "type": "integer",
      "value": "fifthTag.456",
    },
  ],
}
`;

exports[`preparePriorityRuleGroupForSaving > empty values are represented as a space in dot-separated string 1`] = `
{
  "condition": "AND",
  "rules": [
    {
      "operator": "is_empty",
      "type": "string",
      "value": "thirdTag. ",
    },
  ],
}
`;

exports[`preparePriorityRuleGroupForSaving condition and rules are added into results, with dot-separated key and value 1`] = `
{
  "condition": "AND",
  "rules": [
    {
      "operator": "equals",
      "type": "string",
      "value": "firstTag.foo",
    },
    {
      "operator": "contains",
      "type": "string",
      "value": "secondTag.bar",
    },
    {
      "operator": "==",
      "type": "integer",
      "value": "fourthTag.123",
    },
    {
      "operator": "<=",
      "type": "integer",
      "value": "fifthTag.456",
    },
  ],
}
`;

exports[`preparePriorityRuleGroupForSaving empty values are represented as a space in dot-separated string 1`] = `
{
  "condition": "AND",
  "rules": [
    {
      "operator": "is_empty",
      "type": "string",
      "value": "thirdTag. ",
    },
  ],
}
`;
